# rubbot

./: .gitignore
install/: local_setup.sh  setup.sh
install/arm/lib/arm/: arm_control  arm_ik
install/arm/share/arm/: package.sh
install/arm_servos_pubs_subs/share/arm_servos_pubs_subs/: package.sh
install/control/lib/control/: arm_controller  (+2 more)
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/robp_boot_camp_launch/share/robp_boot_camp_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robp_boot_camp_launch/share/robp_boot_camp_launch/launch/: boot_camp_part1_launch.xml  boot_camp_part2_launch.xml  boot_camp_part3_launch.xml
install/robp_boot_camp_launch/share/robp_boot_camp_launch/rviz/: boot_camp_part1.rviz  boot_camp_part2.rviz
install/robp_launch/share/robp_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robp_launch/share/robp_launch/launch/: aruco_launch.py  final_launch.py  frames_launch.xml  front_camera_launch.py  phidgets_launch.py
install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
launch/: arm_launch.py
lidarscan/: lidarscan_0.db3  metadata.yaml
log/: latest_build
scan_and_mag/: metadata.yaml  scan_and_mag_0.db3
src/: frames_2024-02-06_18.01.13.gv
src/arm/: package.xml  setup.py
src/arm/arm/: arm_control.py  arm_fk.py  arm_ik.py  arm_state_machine.py
src/brain/: package.xml  setup.py
src/brain/brain/: behavior_tree.py  sm_ms3.py
src/control/: setup.py
src/control/control/: arm_controller.py  remote_controller.py  wheels_controller.py
src/controller/: package.xml  setup.py
src/controller/controller/: cartesian_axel.py  cartesian_carl.py  cartesian_controller.py  milestone1_goal.py  open_loop_controller.py  sm_skeleton.py  test_sm.py  wall_following_controller.py
src/deep/: package.xml  setup.cfg  setup.py
src/deep/deep/: detector4.py  detector4_backup.py  detector5.py  ros2_detector.py  ros2_detector_backup.py
src/deep_detector/: CMakeLists.txt  package.xml
src/deep_detector/src/: detector4.py  ros2_detector.py  ros2_detector_backup.py  utils.py
src/detection/: package.xml  setup.py
src/detection/detection/: detection.py  detection_backup.py  detection_ms1.py
src/display_markers/: package.xml  setup.py
src/display_markers/display_markers/: display_markers.py
src/localization/: package.xml  setup.py
src/localization/localization/: mapping.py  update.py
src/mapping/: package.xml  setup.py
src/mapping/mapping/: workspace.py  workspace.tsv
src/my_package/: package.xml
src/odometry/: package.xml  setup.py
src/odometry/odometry/: odometry.py
src/planning/: package.xml  setup.py
src/planning/planning/: explore.py  follower.py  generate_path.py  move_to_goal_client.py  move_to_goal_server.py  occupancy_grid.py  planning-14-02-2024.py  planning.py  planning_secondbackup.py  plannning_backup.py
src/rubbot_interfaces/: CMakeLists.txt  package.xml
src/rubbot_interfaces/action/: MoveToGoal.action
src/rubbot_interfaces/msg/: GoalReached.msg
(+668 files in other folders)
