<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robp_boot_camp_launch</name>
  <version>1.0.0</version>
  <description>robp_boot_camp_launch</description>
  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>
  <license>MIT</license>

  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>kobuki_softnode</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robp_boot_camp_distance_sensor</exec_depend>
  <exec_depend>robp_boot_camp_motors</exec_depend>
  <exec_depend>robp_boot_camp_world</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>