<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robp_launch</name>
  <version>1.0.0</version>
  <description>robp_launch</description>
  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>
  <license>MIT</license>

  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robp_phidgets_encoders</exec_depend>
  <exec_depend>robp_phidgets_motors</exec_depend>
  <exec_depend>robp_phidgets_spatial</exec_depend>
  <exec_depend>robp_phidgets_temperature</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
